--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./lab1.1.js"></script>
+  <script src="./lab1.js"></script>
   <title>Document</title>
 </head>
 <body>
-  <form class="form" action="">
-    <input class="input-data" type="text" id="input" placeholder='Введите цепочку'>
+  <form class="form">
+    <input class="input-data" type="text" id="input" placeholder='Введите цепочку для ДКА'>
     <button class="btn" onclick="dfa()">Ок</button>
   </form>
-  <script src="./lab1.1.js"></script>
+  <form class="form">
+    <input class="input-data" type="text" id="inputNKA" placeholder='Введите цепочку для НКА'>
+    <button class="btn" onclick="nfa()">Ок</button>
+  </form>
+
 </body>
 </html>
